--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sass": "sass --watch src/sass/main.scss:src/css/main.css"
+    "sass": "sass --watch src/sass/main.scss:src/css/main.css src/sass/createEmployee.scss:src/css/createEmployee.css --style compressed"
   },
   "eslintConfig": {
     "extends": [
